fix padding so that text isn't on the edge of the screen on mobile and smaller displays

--- a/css/resume.css
+++ b/css/resume.css
@@ -5,13 +5,13 @@
 html {
     display: table;
     margin: auto;
+
+    padding: 0.25in;
 }
 
 body {
     display: table-cell;
     vertical-align: middle;
-
-    margin: 0.25in;
 }
 
 /* end center entire page */
